--- a/KhTracker/Windows/GridOptionsWindow.xaml
+++ b/KhTracker/Windows/GridOptionsWindow.xaml
@@ -20,8 +20,9 @@
                                     <RowDefinition/>
                                     <RowDefinition/>
                                 </Grid.RowDefinitions>
-                                <CheckBox Content="Option 1" Grid.Column="0" Grid.Row="0"/>
-                                <CheckBox Content="Option 2" Grid.Column="1" Grid.Row="0"/>
+                                <TextBox Grid.Column="0" Grid.Row="0" x:Name="TextBoxRows" Text="Enter text..." GotFocus="SetNumRows" LostFocus="TextBox_LostFocus"/>
+                                <!--<CheckBox Content="Option 1" Grid.Column="0" Grid.Row="0"/>-->
+                                <TextBox Grid.Column="1" Grid.Row="0" x:Name="TextBoxColumns" Text="Enter text..." GotFocus="SetNumColumns" LostFocus="TextBox_LostFocus"/>
                                 <CheckBox Content="Option 3" Grid.Column="2" Grid.Row="0"/>
                                 <CheckBox Content="Option 4" Grid.Column="0" Grid.Row="1"/>
                                 <CheckBox Content="Option 5" Grid.Column="1" Grid.Row="1"/>
