--- a/KhTracker/Windows/GridWindow.xaml
+++ b/KhTracker/Windows/GridWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KhTracker.BroadcastWindow"
+﻿<Window x:Class="KhTracker.GridWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,15 +10,22 @@
         Height="510" Width="500"
         LocationChanged="Window_LocationChanged"
         SizeChanged="Window_SizeChanged"
-        Closing="BroadcastWindow_Closing"
+        Closing="GridWindow_Closing"
         MinHeight="325" MinWidth="300" Background="#303030">
 
     <Window.Resources>
-        <Style TargetType="Image">
-            <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
-        </Style>
-        <Style x:Key="ColorToggleButton" TargetType="Button">
-            <Setter Property="Background" Value="LightGray"/>
+        <Style x:Key="ColorToggleButton" TargetType="ToggleButton">
+            <Setter Property="Background" Value="Gray"/>
+            <Setter Property="Margin" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ToggleButton">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
     </Window.Resources>
 
@@ -50,7 +57,10 @@
 
         </Menu>
 
-        <Grid>
+        <Grid x:Name="DynamicGrid">
+        </Grid>
+
+        <!--<Grid>
 
             <Grid>
                 <Grid.RowDefinitions>
@@ -77,7 +87,7 @@
 
                 </Grid.ColumnDefinitions>
 
-                <!-- Grid Lines-->
+                --><!-- Grid Lines--><!--
                 <Rectangle Grid.Row="1" Grid.ColumnSpan="9" Fill="#D81E1E1E"/>
                 <Rectangle Grid.Row="3" Grid.ColumnSpan="9" Fill="#D81E1E1E"/>
                 <Rectangle Grid.Row="5" Grid.ColumnSpan="9" Fill="#D81E1E1E"/>
@@ -567,7 +577,7 @@
 
 
 
-        </Grid>
+        </Grid>-->
     </DockPanel>
     
     
