--- a/KhTracker/Windows/GridWindow.xaml
+++ b/KhTracker/Windows/GridWindow.xaml
@@ -38,6 +38,10 @@
                 <MenuItem Header="Grid Checks" Click="Grid_Options" />
                 <MenuItem Header="Pick Colors" Click="PickColor_Click" />
             </MenuItem>
+            <MenuItem Header="" Focusable="False">
+                <MenuItem Header="Download Card Setting" Click="DownloadCardSetting" />
+                <MenuItem Header="Upload Card Setting" Click="UploadCardSetting" />
+            </MenuItem>
             <MenuItem x:Name="Seedname" Focusable="False"/>
             <Separator/>
 
