--- a/KhTracker/ProgressionDictionary.xaml
+++ b/KhTracker/ProgressionDictionary.xaml
@@ -71,7 +71,7 @@
     <local:GridLabelledImage x:Key="Min-Fight1"           Source="Images\Progression\Min\hollow_bastion\first_fight.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Min-Fight2"           Source="Images\Progression\Min\hollow_bastion\second_fight.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Min-Transport"        Source="Images\Progression\Min\hollow_bastion\transport.png"           GridAllowed="True"                             x:Shared="False"/>
-    <local:GridLabelledImage x:Key="Min-Valves"           Source="Images\Progression\Min\hollow_bastion\steam_valve.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-Valves"           Source="Images\Progression\Min\hollow_bastion\steam_valve.png"           GridAllowed="False"                             x:Shared="False"/>
     <!--Land of Dragons-->
     <local:GridLabelledImage x:Key="Min-Missions"     Source="Images\Progression\Min\land_of_dragons\missions.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Min-Mountain"     Source="Images\Progression\Min\land_of_dragons\mountain_climb.png"           GridAllowed="True"                             x:Shared="False"/>
@@ -148,6 +148,7 @@
     <local:GridLabelledImage x:Key="Min-Drive7"           Source="Images\Progression\Min\drive_forms\7.png"           GridAllowed="True"                             x:Shared="False"/>
     
     <!--Grid Tracker-->
+    <local:GridLabelledImage x:Key="Min-Grid7Drives"          Source="Images\Grid\simple\7drives.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Min-GridDataAxel"          Source="Images\Progression\Min\twilight_town\axel_griddata.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Min-GridDataDemyx"        Source="Images\Progression\Min\hollow_bastion\demyx_griddata.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Min-GridLarxene"          Source="Images\Progression\Min\space_paranoids\larxene.png"          GridAllowed="True"                             x:Shared="False"/>
