--- a/KhTracker/ItemDictionary.xaml
+++ b/KhTracker/ItemDictionary.xaml
@@ -133,6 +133,8 @@
     <local:GridLabelledImage x:Key="Min-GridTornPage3"        Source="Images\Grid\simple\TornPage3.png"           GridAllowed="True"                        x:Shared="false"/>
     <local:GridLabelledImage x:Key="Min-GridTornPage4"        Source="Images\Grid\simple\TornPage4.png"           GridAllowed="True"                        x:Shared="false"/>
     <local:GridLabelledImage x:Key="Min-GridTornPage5"        Source="Images\Grid\simple\TornPage5.png"           GridAllowed="True"                        x:Shared="false"/>
+	<local:GridLabelledImage x:Key="Min-GridMunnyPouch1"        Source="Images\Grid\simple\MunnyPouch1.png"           GridAllowed="True"                        x:Shared="false"/>
+	<local:GridLabelledImage x:Key="Min-GridMunnyPouch2"        Source="Images\Grid\simple\MunnyPouch2.png"           GridAllowed="True"                        x:Shared="false"/>
 
     <!--Old Item Icons-->
     <local:GridLabelledImage x:Key="Old-Report"           Source="Images\Checks\Old\ansem_report.png"           GridAllowed="True"                      x:Shared="false"/>
