--- a/KhTracker/ProgressionDictionary.xaml
+++ b/KhTracker/ProgressionDictionary.xaml
@@ -169,10 +169,26 @@
     <local:GridLabelledImage x:Key="Min-GridVexenData"        Source="Images\Progression\Min\halloween_town\vexen_griddata.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Min-GridZexion"       Source="Images\Progression\Min\olympus_coliseum\zexion.png"         GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Min-GridZexionData"   Source="Images\Progression\Min\olympus_coliseum\zexion_griddata.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridArmoredXemnas1"   Source="Images\Progression\Min\the_world_that_never_was\ArmoredXemnas1.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridArmoredXemnas2"   Source="Images\Progression\Min\the_world_that_never_was\ArmoredXemnas2.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridCloud"   Source="Images\Progression\Min\olympus_coliseum\Cloud.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridFinalXemnas"   Source="Images\Progression\Min\the_world_that_never_was\FinalXemnas.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridHayner"   Source="Images\Progression\Min\simulated_twilight_town\Hayner.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridLeon"   Source="Images\Progression\Min\olympus_coliseum\Leon.png"           GridAllowed="True"                             x:Shared="False"/>
+	<local:GridLabelledImage x:Key="Min-GridMunnyPouch1"   Source="Images\Grid\simple\MunnyPouch1.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridMunnyPouch2"   Source="Images\Grid\simple\MunnyPouch2.png"            GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridRiku"   Source="Images\Progression\Min\land_of_dragons\Riku.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridSeifer"   Source="Images\Progression\Min\simulated_twilight_town\Seifer.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridSetzer"   Source="Images\Progression\Min\simulated_twilight_town\Setzer.png"           GridAllowed="True"                             x:Shared="False"/>
+	<local:GridLabelledImage x:Key="Min-GridShadowStalker"   Source="Images\Progression\Min\beast's_castle\ShadowStalker.png"           GridAllowed="True"                             x:Shared="False"/>
+	<local:GridLabelledImage x:Key="Min-GridTifa"   Source="Images\Progression\Min\olympus_coliseum\Tifa.png"           GridAllowed="True"                             x:Shared="False"/>
+    <local:GridLabelledImage x:Key="Min-GridVivi"   Source="Images\Progression\Min\simulated_twilight_town\Vivi.png"           GridAllowed="True"                             x:Shared="False"/>
+	<local:GridLabelledImage x:Key="Min-GridYuffie"   Source="Images\Progression\Min\olympus_coliseum\Yuffie.png"           GridAllowed="True"                             x:Shared="False"/>
+	<local:GridLabelledImage x:Key="Min-GridBlizzardLord"   Source="Images\Progression\Min\agrabah\BlizzardLord.png"           GridAllowed="True"                             x:Shared="False"/>
+	<local:GridLabelledImage x:Key="Min-GridVolcanoLord"   Source="Images\Progression\Min\agrabah\VolcanoLord.png"           GridAllowed="True"                             x:Shared="False"/>
 
 
-
-    <!--World Progression (Old)-->
+	<!--World Progression (Old)-->
     <!--100 Acre Wood-->
     <local:GridLabelledImage x:Key="Old-Piglet"       Source="Images\Progression\Old\100_acre_wood\blustery_rescue.png"           GridAllowed="True"                             x:Shared="False"/>
     <local:GridLabelledImage x:Key="Old-Rabbit"       Source="Images\Progression\Old\100_acre_wood\hunny_slider.png"           GridAllowed="True"                             x:Shared="False"/>
