--- a/KhTracker/Windows/GridWindow.xaml
+++ b/KhTracker/Windows/GridWindow.xaml
@@ -36,7 +36,12 @@
             <MenuItem Header="Options" Focusable="False">
                 <MenuItem Header="Regenerate Card" Click="GenerateGrid" />
                 <MenuItem Header="Grid Checks" Click="Grid_Options" />
+            </MenuItem>
+            <MenuItem Header="Image Visuals" Focusable="False">
                 <MenuItem Header="Pick Colors" Click="PickColor_Click" />
+                <Separator/>
+                <MenuItem Header="Televo Icons" Click="TelevoIconsToggle" x:Name="TelevoIconsOption" IsCheckable="True" IsChecked="True"/>
+                <MenuItem Header="Sonic Icons" Click="SonicIconsToggle" x:Name="SonicIconsOption" IsCheckable="True" IsChecked="False"/>
             </MenuItem>
             <MenuItem Header="Seeds" Focusable="False">
                 <MenuItem Header="Download Card Setting" Click="DownloadCardSetting" />
